Update tech stack in AGENTS.md and simplify order list conversion
Expanded the Key Technologies section in AGENTS.md to include Java 17, MySQL, H2, SpringDoc, Eureka, OpenFeign, Resilience4j, SLF4J, Spring Data JPA, and Lombok. In OrderService.java, replaced Collectors.toList() with the more concise toList() method for converting order entities to DTOs.